feat: add pages, country's info, gallery

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,3 +1,4 @@
+
 #head{
     width: 1200px;
     height: 60px;
@@ -5,7 +6,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #9ee960;
+    background-color: #00000018;
     margin: 0 auto;
     padding: 0 2%;
+}
+a, a:visited, .lang {
+    text-decoration: none;
+    color: #1f2877;
 }
