refactor: change some styles

--- a/src/components/Details.scss
+++ b/src/components/Details.scss
@@ -7,4 +7,10 @@
 }
 .country__info{
     margin-bottom: 20px;
+    text-align: center;
+}
+.image-gallery{
+    width: 600px;
+    height: 450px;
+    margin: 0 auto;
 }
